@@ -7,8 +7,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>609</width>
-    <height>521</height>
+    <width>607</width>
+    <height>519</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,14 +30,14 @@
         <string>Programs</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_2">
-        <item row="0" column="1">
+        <item row="0" column="2">
          <widget class="QGroupBox" name="gbIcons">
           <property name="title">
            <string>Icons</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="0" colspan="2">
+        <item row="1" column="1" colspan="2">
          <widget class="QGroupBox" name="gbInfo">
           <property name="title">
            <string>Info</string>
@@ -53,7 +53,7 @@
           </layout>
          </widget>
         </item>
-        <item row="0" column="0">
+        <item row="0" column="1">
          <widget class="QGroupBox" name="gbCategoryes">
           <property name="minimumSize">
            <size>
@@ -95,6 +95,19 @@
             </widget>
            </item>
           </layout>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QListWidget" name="listWidget">
+          <property name="dragEnabled">
+           <bool>true</bool>
+          </property>
+          <property name="dragDropOverwriteMode">
+           <bool>true</bool>
+          </property>
+          <property name="dragDropMode">
+           <enum>QAbstractItemView::InternalMove</enum>
+          </property>
          </widget>
         </item>
        </layout>
@@ -404,7 +417,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>609</width>
+     <width>607</width>
      <height>23</height>
     </rect>
    </property>
