@@ -16,6 +16,8 @@ Version 0.113
   - Added translation file for Portuguese (Brazil) by Marcio Moraes;
   - Added *.xpm filter to icon import patten;
   - Added http proxy support for winetriks;
+  - Improved icon display widget;
+  - Added Drag & Drop for icons and wine executables;
  Fixed:
   - Some fixes for q4wine.desktop (thx to Eugene Pivnev);
   - Fixed GUI bug: Text fields size, on some desktop configurations, are too small to edit;
